add: service pour creation et update de plante via api plante externe
